--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,5 @@ UserSettings filter=lfs diff=lfs merge=lfs -text
 Assets filter=lfs diff=lfs merge=lfs -text
 Library filter=lfs diff=lfs merge=lfs -text
 Logs filter=lfs diff=lfs merge=lfs -text
+/The_Magic_Camera_플레이_영상.mp4 filter=lfs diff=lfs merge=lfs -text
+TestMovie filter=lfs diff=lfs merge=lfs -text
